Änderungen Kapitel 1.4 bis Lemma 1.4.3 mit Beweis

--- a/Ana3Einleitung.tex
+++ b/Ana3Einleitung.tex
@@ -17,6 +17,7 @@
 
 \newcommand{\RM}[1]{\MakeUppercase{\romannumeral #1{.}}}
 \newcommand{\integ}[2]{\int_{#1} #2 \,\text{d}x}
+\newcommand{\id}{1\hspace{-0,9ex}1}
 
 
 \theoremstyle{definition}
@@ -25,7 +26,7 @@
 \newtheorem{satz}[subsubsection]{Satz}
 \newtheorem{korollar}[subsubsection]{Korrolar}
 \newtheorem*{folgerung}{Folgerung}
-
+\newtheorem{lemma}[subsubsection]{Lemma}
 \theoremstyle{definition}
 \newtheorem{claim}[subsubsection]{Behauptung}
 \newtheorem*{claim_n}{Behauptung}
@@ -40,7 +41,7 @@
 
 \newpage
 
-%\section{Lebesgue-Integration oder Gebietsintegrale im $\mathbb{R}^n$}
+\section{Lebesgue-Integration oder Gebietsintegrale im $\mathbb{R}^n$}
 \input{WiederholungMengen}
 \input{TopologieGrundbegriffe}
 \input{LebesgueNullmengen}
